--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,23 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #ffffff;
-  color: #2e2f42;
+  background-color: #f4f4f4;
+  color: #333333;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
 a {
@@ -12,7 +28,8 @@ a {
   cursor: pointer;
 }
 
-ul {
+ul,
+ol {
   margin: 0;
   padding-left: 0;
   list-style-type: none;
@@ -20,15 +37,19 @@ ul {
 
 img {
   display: block;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  * {
-    scroll-behavior: smooth;
-  }
+button {
+  cursor: pointer;
+  color: inherit;
+}
+
+input,
+textarea {
+  outline: none;
 }
 
 .container {
@@ -51,4 +72,17 @@ img {
   .container {
     max-width: 1280px;
   }
+}
+
+.input-form-section {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.deliveries-form,
+.deliveries-form-select,
+.main-title,
+.delivery-submit-btn,
+.deliveries-form-more-note-btn {
+  text-transform: uppercase;
 }
