fix http request

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -251,7 +251,6 @@ input::-webkit-outer-spin-button {
 }
 
 .deliveries-table tbody tr {
-  border-bottom: 1px solid #e0e0e0;
   transition: background-color 0.3s ease;
 }
 
@@ -269,6 +268,7 @@ input::-webkit-outer-spin-button {
   vertical-align: middle;
   word-wrap: break-word;
   text-align: center;
+  border: 1px solid #e0e0e0;
 }
 
 .delete-delivery-form {
