--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,6 +45,7 @@ img {
 button {
   display: inline-block;
   padding: 10px 20px;
+  text-transform: uppercase;
   font-size: 16px;
   font-weight: 500;
   color: #ffffff;
@@ -79,7 +80,7 @@ input::-webkit-outer-spin-button {
   max-width: 420px;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 20px auto;
+  margin: 0 auto;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -98,7 +99,8 @@ input::-webkit-outer-spin-button {
   }
 }
 
-.input-form-section {
+.input-form-section,
+.update-delete-section {
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -178,12 +180,17 @@ input::-webkit-outer-spin-button {
 }
 
 .deliveries-form-more-note-btn,
-.deliveries-form-scan-btn {
+.deliveries-form-scan-btn,
+.update-delivery-btn {
   background-color: #2196f3;
 }
 
 .deliveries-form-more-note-btn:hover,
-.deliveries-form-scan-btn:hover {
+.deliveries-form-scan-btn:hover,
+.deliveries-form-more-note-btn:focus,
+.deliveries-form-scan-btn:focus,
+.update-delivery-btn:hover,
+.update-delivery-btn:focus {
   background-color: #1e88e5;
 }
 
@@ -232,6 +239,7 @@ input::-webkit-outer-spin-button {
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 50px;
 }
 
 .deliveries-table-head {
@@ -282,13 +290,22 @@ input::-webkit-outer-spin-button {
   margin-bottom: 20px;
 }
 
+.delete-id-label {
+  text-align: center;
+}
+
 .deliveries-form-input.delete {
   display: block;
   width: 70px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .delete-delivery-btn {
   background-color: #f44336;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .delete-delivery-btn:hover,
@@ -350,4 +367,82 @@ input::-webkit-outer-spin-button {
   .label-input-wrap.shiping-note {
     flex-grow: 1;
   }
+}
+
+.update-delivery-wrap {
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.update-delivery-title {
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .update-delete-section-wrap {
+    display: flex;
+    align-items: center;
+    column-gap: 50px;
+    justify-content: space-around;
+  }
+}
+
+.update-delivery-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  z-index: 999;
+
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.update-delivery-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+}
+
+.update-delivery-window {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 90%;
+  background: linear-gradient(145deg, #ffffff, #f0f0f0);
+  border-radius: 12px;
+  padding: 20px;
+  z-index: 1000;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25), 0 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+.modal-window-close-btn {
+  position: absolute;
+  font-size: 32px;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  color: #333;
+  transition: color 250ms linear, transform 250ms linear;
+}
+
+.modal-window-close-btn:hover,
+.modal-window-close-btn:focus {
+  background-color: transparent;
+  color: #ff0000;
+  transform: scale(1.1);
 }
