--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,6 +80,7 @@ input::-webkit-outer-spin-button {
   max-width: 420px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 20px;
   margin: 0 auto;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -228,6 +229,7 @@ input::-webkit-outer-spin-button {
 .table-container {
   max-width: 100%;
   overflow-x: auto;
+  margin-bottom: 20px;
 }
 
 .deliveries-table {
@@ -239,7 +241,7 @@ input::-webkit-outer-spin-button {
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .deliveries-table-head {
@@ -465,4 +467,10 @@ input::-webkit-outer-spin-button {
   margin-top: auto;
   margin-left: auto;
   margin-right: auto;
+}
+
+.load-more-btn {
+  display: block;
+
+  margin: 0 auto;
 }
